# server/domain/index.ts
@@ -20,6 +20,7 @@ export * from './poll'
 export * from './contributions'
 export * from './guest'
 export * from './instance-settings'
+export * from './accounts'
 export * from './expenses'
 export * from './series'
 export * from './chat'
